testsuite/tests/saks/should_fail/saks_fail012.stderr

saks_fail012.hs:8:1: error: [GHC-83865]
    • Couldn't match expected kind ‘Constraint’
                  with actual kind ‘* -> Constraint’
    • In the class declaration for ‘C’
